--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ DB_PASSWORD=your_password_here
 # For OpenAI (requires internet initially to download, then can work offline with cached model)
 OPENAI_API_KEY=sk-your-key-here
 LLM_PROVIDER=openai
-LLM_MODEL=gpt-4
+LLM_MODEL=gpt-4o-mini
 
 # For local LLM with Ollama (fully offline after model download)
 # LLM_PROVIDER=local
