Added semantic chunker from langchain.

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,6 @@ EMBEDDING_DIMENSION=1536
 # Classification Settings
 CONFIDENCE_THRESHOLD=0.7
 TOP_K_RETRIEVAL=5
+
+# Debug Mode (set to 'true' for detailed logging)
+DEBUG=true
