--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Core dependencies
 # Using psycopg (v3) for Python 3.13 compatibility
 psycopg[binary]>=3.3.0
+asyncpg>=0.29.0  # Async PostgreSQL adapter
 
 # Embedding and LLM
 sentence-transformers>=2.7.0
@@ -18,7 +19,7 @@ python-dotenv==1.0.0
 numpy>=1.26.0  # Python 3.13 compatible version
 
 # Web Framework
-fastapi==0.109.0
+fastapi==0.115.0
 uvicorn[standard]==0.27.0
 python-multipart==0.0.6
 
